# qt-meson-template

./: meson.build
